--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="seven columns">
-            <div class="row">
+            <div class="row output">
                 <h3 id="found">We found: </h3>
                 <div id="output"></div>
             </div>
